--- a/tmux.conf
+++ b/tmux.conf
@@ -2,10 +2,8 @@ set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
-
 set -g default-terminal "screen-256color"
-
 setw -g monitor-activity on
 set -g visual-activity on
-
 set -g status-justify centre
+set -g history-limit 10000
