--- a/rtorrent.rc
+++ b/rtorrent.rc
@@ -6,7 +6,7 @@ port_random = yes
 dht = auto
 encryption = require
 peer_exchange = yes
-safe_sync = yes
+pieces.sync.always_safe = yes
 
 schedule = watch_directory,10,10,load_start=~/rtorrent/watch/*.torrent
 schedule = tied_directory,10,10,start_tied=
