--- a/mpv/config
+++ b/mpv/config
@@ -5,5 +5,7 @@ osc=yes
 screenshot-format=png
 screenshot-template="~/Dropbox/screenshots/%F - %p"
 
+cache-default=50000
+
 alang=jpn
 slang=enm,eng
