--- a/mpv/config
+++ b/mpv/config
@@ -9,3 +9,6 @@ cache-default=50000
 
 alang=jpn
 slang=enm,eng
+
+# don't let xscreensaver activate during playback
+heartbeat-cmd="xscreensaver-command -deactivate >&- 2>&- &"
