--- a/mpv/config
+++ b/mpv/config
@@ -12,3 +12,5 @@ slang=enm,eng
 
 # don't let xscreensaver activate during playback
 heartbeat-cmd="xscreensaver-command -deactivate >&- 2>&- &"
+
+autofit-larger=50%x50%
