add tmux session files, syncing

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,3 +7,5 @@ setw -g monitor-activity on
 set -g visual-activity on
 set -g status-justify centre
 set -g history-limit 10000
+
+bind q source-file ~/.tmux/quad
