--- a/config/hexchat/colors.conf
+++ b/config/hexchat/colors.conf
@@ -35,8 +35,8 @@ color_257 = 4949 4848 3e3e
 color_258 = cfcf cfcf c2c2
 color_259 = 2727 2828 2222
 color_260 = e6e6 dbdb 7474
-color_261 = fdfd 9797 1f1f
-color_262 = a6a6 e2e2 2e2e
-color_263 = 6666 d9d9 efef
-color_264 = 7575 7171 5e5e
+color_261 = 6666 d9d9 efef
+color_262 = a6a6 e2e2 2f2f
+color_263 = fdfd 9797 1f1f
+color_264 = f8f8 f8f8 f2f2
 color_265 = f9f9 2626 7272
