--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@ set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm"
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-justify centre
