--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,11 @@ setw -g monitor-activity on
 set -g visual-activity on
 set -g status-justify centre
 set -g history-limit 10000
+set -g utf8 on
+set -g status-utf8 on
+
+bind C-p previous-window
+bind C-n next-window
 
 bind q source-file ~/.tmux/quad
 bind s source-file ~/.tmux/split
