--- a/tmux.conf
+++ b/tmux.conf
@@ -9,10 +9,14 @@ set -g status-justify centre
 set -g history-limit 10000
 set -g utf8 on
 set -g status-utf8 on
+set -g bell-action any
 
 bind C-p previous-window
 bind C-n next-window
 
+bind h split-window -h
+bind v split-window -v
+
 bind q source-file ~/.tmux/quad
 bind s source-file ~/.tmux/split
-
+bind r source-file ~/.tmux.conf
