--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,4 @@
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
 set -g default-terminal "xterm"
 setw -g monitor-activity on
 set -g visual-activity on
