--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,7 @@
 set -g mode-mouse on
-set -g default-terminal "xterm"
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-justify centre
