--- a/rtorrent-pan.rc
+++ b/rtorrent-pan.rc
@@ -7,6 +7,7 @@ dht = auto
 encryption = require
 peer_exchange = yes
 pieces.sync.always_safe = yes
+network.max_open_files = 64
 
 schedule = watch_directory,10,10,load_start=/home/william/rtorrent/watch/*.torrent
 schedule = tied_directory,10,10,start_tied=
