mpv/config: Add ytdl-format instruction for best audio and video settings.

--- a/mpv/config
+++ b/mpv/config
@@ -17,6 +17,8 @@ autofit-larger=50%x50%
 
 user-agent="Mozilla/5.0 (X11; Linux; Linux; rv:0.0) Gecko/0 Firefox/0"
 
+ytdl-format=bestvideo+bestaudio
+
 force-seekable
 
 [extension.webm]
