Revert Syncthing to Dropbox migration.
As it turns out, Syncthing is nowhere near as mature as I thought it was.

--- a/mpv/config
+++ b/mpv/config
@@ -3,7 +3,7 @@ force-window
 osc=yes
 
 screenshot-format=png
-screenshot-template="~/Sync/screenshots/%F - %p"
+screenshot-template="~/Dropbox/screenshots/%F - %p"
 
 cache-default=50000
 
