--- a/mpv/config
+++ b/mpv/config
@@ -1,3 +1,4 @@
+ontop
 no-border
 force-window
 osc=yes
@@ -11,7 +12,8 @@ alang=jpn
 slang=enm,eng
 
 # don't let xscreensaver activate during playback
-heartbeat-cmd="xscreensaver-command -deactivate >&- 2>&- &"
+# deprecated?
+# heartbeat-cmd="xscreensaver-command -deactivate >&- 2>&- &"
 
 autofit-larger=50%x50%
 
