--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
-set -g mouse on
-set -g mouse-utf8 on
+# set -g mouse on
+# set -g mouse-utf8 on
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-justify centre
