tmux: Remove old mouse conf, add default-command.
Rationale: Overrides default login shell behavior.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,4 @@
-# set -g mouse on
-# set -g mouse-utf8 on
+set -g default-command "${SHELL}"
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-justify centre
