i3status: Add time order.

--- a/i3status.conf
+++ b/i3status.conf
@@ -4,6 +4,7 @@ general {
 	interval = 5
 }
 
+order += "time"
 order += "disk /"
 order += "wireless wlan0"
 order += "ethernet eth0"
@@ -11,6 +12,10 @@ order += "volume master"
 order += "cpu_usage"
 order += "load"
 order += "tztime local"
+
+time {
+	format = "T: %H:%M:%S"
+}
 
 disk / {
 	format = "D: %free (%avail)/ %total"
