--- a/config/i3/config
+++ b/config/i3/config
@@ -218,7 +218,7 @@ for_window [title="^Steam Keyboard$"] floating enable
 # keep steam in its own workspace
 assign [class="Steam"] steam
 
-exec compton -b
+exec compton -cCGb --backend glx --vsync opengl
 exec xrandr --output DVI-0 --left-of HDMI-0
 exec bash ~/.fehbg
 exec xscreensaver -nosplash
