--- a/config/i3/config
+++ b/config/i3/config
@@ -204,6 +204,8 @@ for_window [class="mpv"] floating enable
 for_window [class="Pithos"] floating enable
 for_window [class="Surf"] floating enable
 for_window [class="Thunar"] floating enable
+for_window [class="Pcmanfm"] floating enable
+for_window [class="Audacity"] floating enable
 for_window [title="floaterm"] floating enable
 for_window [title="Netflix"] floating enable
 for_window [title="^TightVNC: .*$"] floating enable
