--- a/newsbeuter/config
+++ b/newsbeuter/config
@@ -4,8 +4,8 @@ auto-reload yes
 # reload every 30 mins while running
 reload-time 30
 
-# use surf to browse
-browser "surf %u"
+# use uzbl-browser to browse
+browser "uzbl-browser --uri=%u"
 
 # use mpv to open with ,-y
-macro y set browser "mpv %u"; open-in-browser-and-mark-read ; set browser "surf %u"
+macro y set browser "mpv %u"; open-in-browser-and-mark-read ; set browser "uzbl-browser --url=%u"
