--- a/rubocop.yml
+++ b/rubocop.yml
@@ -15,5 +15,8 @@ Style/TrailingCommaInLiteral:
 Style/FormatString:
   EnforcedStyle: percent
 
+Style/DoubleNegation:
+  Enabled: false
+
 Metrics/LineLength:
   Max: 90
