rubocop: Disable rescue modifier check
I like using rescue modifiers.

--- a/rubocop.yml
+++ b/rubocop.yml
@@ -18,6 +18,9 @@ Style/FormatString:
 Style/DoubleNegation:
   Enabled: false
 
+Style/RescueModifier:
+  Enabled: false
+
 Metrics/LineLength:
   Max: 100
 
