--- a/newsbeuter/config
+++ b/newsbeuter/config
@@ -8,4 +8,4 @@ reload-time 30
 browser "uzbl-tabbed %u"
 
 # use mpv to open with ,-y
-macro y set browser "mpv %u"; open-in-browser-and-mark-read ; set browser "uzbl-browser --url=%u"
+macro y set browser "mpv %u"; open-in-browser-and-mark-read ; set browser "uzbl-tabbed %u"
