rtorrent: Remove old config, update

--- a/rtorrent-zeenbox.rc
+++ b/rtorrent-zeenbox.rc
@@ -4,7 +4,7 @@ session = /home/william/rtorrent/session/
 port_range = 6890-6999
 port_random = yes
 dht = auto
-encryption = require
+encryption = require,require_RC4
 peer_exchange = yes
 pieces.sync.always_safe = yes
 network.max_open_files = 64
