config/kbs2: Update config

--- a/config/kbs2/kbs2.conf
+++ b/config/kbs2/kbs2.conf
@@ -18,6 +18,7 @@ post-hook = "~/.config/kbs2/hooks/push-repo"
 
 [commands.edit]
 editor = "subl -w"
+post-hook = "~/.config/kbs2/hooks/push-repo"
 
 [commands.pass]
 clipboard-duration = 10
