config/kbs2: Update kbs2.conf

--- a/config/kbs2/kbs2.conf
+++ b/config/kbs2/kbs2.conf
@@ -11,6 +11,7 @@ alphabet = "abcdefghijklmnopqrstuvwxyz0123456789(){}[]-_+="
 length = 16
 
 [commands.new]
+generate-on-empty = true
 post-hook = "~/.config/kbs2/hooks/push-repo"
 
 [commands.rm]
