kbs2: Add error-hook

--- a/config/kbs2/kbs2.conf
+++ b/config/kbs2/kbs2.conf
@@ -4,6 +4,7 @@ keyfile = "/home/william/.config/kbs2/key.wrapped"
 wrapped = true
 store = "~/.kbs2-store"
 reentrant-hooks = false
+error-hook = "~/.config/kbs2/hooks/error-hook-notify"
 
 [[generators]]
 name = "default"
