tmux: Enable mouse mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,7 @@ set -g visual-activity on
 set -g status-justify centre
 set -g history-limit 10000
 set -g bell-action any
+set -g mouse on
 
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t= \;                 send-keys -M
