config/spotifyd: add pid option, disable cache_path

--- a/config/spotifyd/spotifyd.conf
+++ b/config/spotifyd/spotifyd.conf
@@ -5,6 +5,9 @@ use_mpris = true
 backend = "pulseaudio"
 device_name = "spotifyd"
 bitrate = 320
-cache_path = "/home/william/.cache/spotifyd"
+# disable the cache for now, since librespot doesn't have cache eviction yet
+# see: https://github.com/librespot-org/librespot/issues/34
+# cache_path = "/home/william/.cache/spotifyd"
 volume_normalisation = true
 on_song_change_hook = "/home/william/.config/spotifyd/notify-hook"
+pid = "/var/run/spotifyd.pid"
