config/kbs2: update conf

--- a/config/kbs2/kbs2.conf
+++ b/config/kbs2/kbs2.conf
@@ -27,3 +27,9 @@ clipboard-duration = 10
 clear-after = true
 x11-clipboard = "Clipboard"
 clear-hook = "~/.config/kbs2/hooks/pass-clear-notify"
+
+[commands.dmenu-pass]
+notify-username = true
+
+[commands.choose-pass]
+notify-username = true
