config/kbs2: update ext cmd configs

--- a/config/kbs2/kbs2.conf
+++ b/config/kbs2/kbs2.conf
@@ -29,8 +29,8 @@ post-hook = "~/.config/kbs2/hooks/push-repo"
 [commands.rm]
 post-hook = "~/.config/kbs2/hooks/push-repo"
 
-[commands.dmenu-pass]
+[commands.ext.dmenu-pass]
 notify-username = true
 
-[commands.choose-pass]
+[commands.ext.choose-pass]
 notify-username = true
