--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -21,4 +21,12 @@
             <const>rgb</const>
         </edit>
     </match>
+    <alias>
+        <family>monospace</family>
+        <prefer>
+            <family>LMMono10</family>
+            <family>Noto Color Emoji</family>
+            <family>Noto Emoji</family>
+        </prefer>
+    </alias>
 </fontconfig>
