config/alacritty: better font names

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -4,16 +4,16 @@ font:
     style: Regular
 
   bold:
-    family: LMMonoCaps10
-    style: Regular
+    family: Latin Modern Mono Light
+    style: Bold
 
   italic:
     family: monospace
     style: Italic
 
   bold_italic:
-    family: LMMonoCaps10
-    style: Oblique
+    family: Latin Modern Mono Light
+    style: Bold Italic
 
   size: 12
 
