--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -21,10 +21,17 @@
             <const>rgb</const>
         </edit>
     </match>
+    <match target="font">
+        <test name="family" qual="any">
+            <string>Latin Modern Mono Light</string>
+        </test>
+
+        <edit name="embolden" mode="assign"><bool>true</bool></edit>
+    </match>
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>LMMono10</family>
+            <family>Latin Modern Mono</family>
             <family>Noto Color Emoji</family>
             <family>Noto Emoji</family>
         </prefer>
