tmux.conf: fix PageUp/PageDn behavior

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,8 @@ set -g mouse on
 
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t= \;                 send-keys -M
+bind -n PageUp if -F "#{alternate_on}" "send-keys PageUp" "copy-mode -eu"
+bind -n PageDown if -F "#{alternate_on}" "send-keys PageDown" " if -F '#{pane_in_mode}' 'send-keys PageDown'"
 
 bind C-p previous-window
 bind C-n next-window
