--- a/config/newsboat/config
+++ b/config/newsboat/config
@@ -13,3 +13,5 @@ browser "firefox -new-tab %u"
 
 # use mpv to open with ,-y
 macro y set browser "mpv %u"; open-in-browser-and-mark-read ; set browser "firefox -new-tab %u"
+
+cleanup-on-quit yes
