--- a/config/kbs2/config.toml
+++ b/config/kbs2/config.toml
@@ -28,7 +28,7 @@ clear-after = true
 clear-hook = "~/.config/kbs2/hooks/pass-clear-notify"
 
 [commands.edit]
-editor = "subl -w"
+editor = "code -w"
 post-hook = "~/.config/kbs2/hooks/push-repo"
 
 [commands.rm]
