config/kbs2: add `commands.rename` config

--- a/config/kbs2/config.toml
+++ b/config/kbs2/config.toml
@@ -34,6 +34,9 @@ post-hook = "~/.config/kbs2/hooks/push-repo"
 [commands.rm]
 post-hook = "~/.config/kbs2/hooks/push-repo"
 
+[commands.rename]
+post-hook = "~/.config/kbs2/hooks/push-repo"
+
 [commands.ext.dmenu-pass]
 notify-username = true
 chooser = "rofi -dmenu -p kbs2"
