--- a/mpv/config
+++ b/mpv/config
@@ -13,7 +13,7 @@ autofit-larger=50%x50%
 
 user-agent="Mozilla/5.0 (X11; Linux; Linux; rv:0.0) Gecko/0 Firefox/0"
 
-ytdl-format='bestvideo[width<=1920][height<=1080]+bestaudio/best'
+ytdl-format='best/bestvideo+bestaudio'
 ytdl-raw-options=yes-playlist=
 
 force-seekable
