--- a/i3status-janus.conf
+++ b/i3status-janus.conf
@@ -7,16 +7,10 @@ general {
 order += "time"
 order += "volume master"
 order += "load"
-order += "tztime local"
+order += "ethernet enp42s0"
 
 time {
 	format = "T: %Y-%m-%d %H:%M:%S"
-}
-
-disk / {
-	format = "D: %free (%avail)/ %total"
-	low_threshold = "10"
-	threshold_type = "percentage_free"
 }
 
 wireless wlan0 {
@@ -24,18 +18,14 @@ wireless wlan0 {
 	format_down = "W: down"
 }
 
-ethernet eth0 {
-	format_up = "E: %ip (%speed)"
+ethernet enp42s0 {
+	format_up = "E: %ip"
 	format_down = "E: down"
 }
 
 volume master {
 	device = "pulse"
 	format = "V: %volume"
-}
-
-cpu_usage {
-	format = "C: %usage"
 }
 
 load {
