aerc: use urlscan, config tweaks

--- a/config/aerc/aerc.conf
+++ b/config/aerc/aerc.conf
@@ -471,21 +471,7 @@ threading-enabled = true
 #display-mode=text
 
 [viewer]
-#
-# Specifies the pager to use when displaying emails. Note that some filters
-# may add ANSI codes to add color to rendered emails, so you may want to use a
-# pager which supports ANSI codes.
-#
-# Default: less -Rc
-#pager=less -Rc
-
-#
-# If an email offers several versions (multipart), you can configure which
-# mimetype to prefer. For example, this can be used to prefer plaintext over
-# html emails.
-#
-# Default: text/plain,text/html
-#alternatives=text/plain,text/html
+alternatives = text/html,text/plain
 
 #
 # Default setting to determine whether to show full headers or only parsed
@@ -529,7 +515,7 @@ editor = nano
 # multiple headers in the same row, separate them with a pipe, e.g. "To|From".
 #
 # Default: To|From,Subject
-header-layout=To|From,Subject,CC|BCC
+header-layout = To|From,Subject,CC|BCC
 
 #
 # Edit headers into the text editor instead than separate fields.
@@ -647,8 +633,7 @@ text/plain=colorize
 text/calendar=calendar
 message/delivery-status=colorize
 message/rfc822=colorize
-text/html=pandoc -f html -t plain | colorize
-#text/html=html | colorize
+text/html=html | colorize
 #text/*=bat -fP --file-name="$AERC_FILENAME"
 #application/x-sh=bat -fP -l sh
 #image/*=catimg -w $(tput cols) -
