--- a/config/aerc/binds.conf
+++ b/config/aerc/binds.conf
@@ -101,7 +101,7 @@ S = :save<space>
 D = :delete<Enter>
 A = :archive flat<Enter>
 
-<C-l> = :open-link <space>
+<C-l> = :pipe -m urlscan<Enter>
 
 f = :forward<Enter>
 rr = :reply -a<Enter>
