aerc: update binds

--- a/config/aerc/binds.conf
+++ b/config/aerc/binds.conf
@@ -16,6 +16,7 @@
 [messages]
 q = :prompt 'Quit?' quit<Enter>
 u = :unread -t<Enter>
+<C-r> = :unread -t<Enter>:next<Enter>
 f = :flag -t<Enter>
 
 j = :next<Enter>
