aerc: enable fuzzy-complete

--- a/config/aerc/aerc.conf
+++ b/config/aerc/aerc.conf
@@ -251,7 +251,7 @@ default-save-path = ~/Downloads
 # consecutive characters in the command or option.
 #
 # Default: false
-#fuzzy-complete=false
+fuzzy-complete=true
 
 # How long to wait after the last input before auto-completion is triggered.
 #
